2011-08-21  Robert Larice
 * src/spicelib/analysis/cktpzstr.c :
   prototypes, and avoid a NULL dereference when PZDEBUG is active

2011-08-21  Robert Larice
 * src/frontend/outitf.c :
   avoid segfault when printing aout a nonexistant `ReferenceValue' (pzan)

2011-08-21  Holger Vogt
 * fftext.h, fftext.c, fftlib.c, fftlib.h: type long to int
   (patch by Robert)
   isracct.c, vsrcacct.c: suppress info on freeing fft tables

2011-08-21  Robert Larice
 * src/main.c ,
 * src/frontend/runcoms.c ,
 * src/frontend/runcoms2.c :
   use unlink() instead of remove()
     thanks to Marcel Hendrix

2011-08-20  Robert Larice
 * src/spicelib/devices/adms/admst/ngspice.xml :
   #7/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     adms-3

2011-08-20  Robert Larice
 * src/spicelib/devices/adms/admst/*.xml :
   #6/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     adms-2

2011-08-20  Robert Larice
 * src/xspice/cmpp/pp_mod.c ,
 * src/xspice/cmpp/writ_ifs.c :
   #5/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     xspice

2011-08-20  Robert Larice
 * visualc/vngspice.vcproj :
   #4/7 use a subdirectory "ngspice" for includes to create a uniq namespace

2011-08-20  Robert Larice
 * configure.ac ,
 * src/Makefile.am :
   #3/7 use a subdirectory "ngspice" for includes to create a uniq namespace

2011-08-20  Robert Larice
 * src/include/* :
   #2/7 use a subdirectory "ngspice" for includes to create a uniq namespace
     move the include files down into the new directory

2011-08-20  Robert Larice
 * **/* :
   #1/7 use a subdirectory "ngspice" for includes to create a uniq namespace

2011-08-20  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
   update bison generated files

2011-08-20  Robert Larice
 * src/frontend/parse-bison.y :
   the i() and v() function application have special semantics

2011-08-20  Robert Larice
 * src/maths/fft/Makefile.am ,
 * visualc/vngspice.vcproj :